# kindle-dash-gen-nyc

./: README.md  config.example.toml  pyproject.toml
.claude/: CLAUDE.md  architecture.md  style-guide.md
.claude/agent-memory/code-reviewer/: MEMORY.md  sources-plugin-milestone.md
.claude/context/: testing.md
docs/: plugins.md  sources.md
kindle_dash_gen/: __init__.py  __main__.py  cli.py  config.py  format.py  pipeline.py  plugins.py
kindle_dash_gen/models/: __init__.py  dashboard_data.py  mta.py  weather.py
kindle_dash_gen/render/: layout.py  postprocess.py  prompt.py  toolkit.py
kindle_dash_gen/render/builtins/glanceable/: __init__.py
kindle_dash_gen/render/layouts/glanceable/: __init__.py
kindle_dash_gen/sources/: __init__.py  mta.py  registry.py  toolkit.py  weather.py
kindle_dash_gen/sources/builtins/mta/: __init__.py  model.py  source.py
kindle_dash_gen/sources/builtins/nws/: __init__.py  model.py  source.py
kindle_dash_gen_nyc/: cli.py  config.py  format.py  models.py  pipeline.py
kindle_dash_gen_nyc/assets/dashboard_prompts/: dense.j2
kindle_dash_gen_nyc/assets/mta/: stations.csv
kindle_dash_gen_nyc/models/: dashboard.py
kindle_dash_gen_nyc/render/: __init__.py  layout.py  openrouter.py  prompt.py
kindle_dash_gen_nyc/sources/: mta.py  weather.py
tests/: conftest.py  test_cli.py  test_config.py  test_format.py  test_layout.py  test_mta.py  test_open_meteo.py  test_openrouter.py  test_pipeline.py  test_plugins.py  test_postprocess.py  test_prompt.py  test_sources.py  test_weather.py
(+4 files in other folders)
