[project]
name = "kindle-dash-gen"
version = "0.1.0"
description = "Generate a Kindle e-ink dashboard with NYC weather and subway info."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer==0.26.*",
    "rich==15.*",  # used directly by the CLI for pretty-printing source debug output
    "niquests==3.*",
    "nyct-gtfs==2.*",
    "pillow==12.*",
    "pydantic==2.*",
]

[dependency-groups]
dev = [
    "pytest==9.*",
    "niquests-mock==0.4.*",
    "ruff==0.15.*",
    "mypy==1.*",
    "pre-commit==4.*",
]

[tool.uv]
# Run in place from the clone (uv run python -m kindle_dash_gen); not a built/installed package.
package = false
# nyct-gtfs hard-pins protobuf==4.25.3, which crashes on Python 3.14 ("Metaclasses with
# custom tp_new are not supported"). A modern protobuf works with its bindings.
# See https://github.com/Andrew-Dickinson/nyct-gtfs/issues/10
override-dependencies = ["protobuf>=6"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
files = ["kindle_dash_gen"]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# nyct-gtfs ships no type stubs / py.typed marker.
[[tool.mypy.overrides]]
module = ["nyct_gtfs.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
